--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">MY Application</string>
-    <string name="tv_msg">good boy</string>
+    <string name="tv_msg">good boy!</string>
 </resources>
